[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "restless"
version = "0.1.0"
description = "Generate MCP servers from OpenAPI specs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "fastmcp>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
enhance = ["openai>=1.0"]

[project.scripts]
restless = "restless.cli:app"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-asyncio"]
